--- a/src/components/nameInput/nameInput.scss
+++ b/src/components/nameInput/nameInput.scss
@@ -1,21 +1,21 @@
-.nameInput-wrapper {
-  display: flex;
-}
 
-.nameInput__input {
-  margin: 10px;
-  border-radius: 8px;
-  border: 1px solid chocolate;
+.nameInput {
+  margin: 20px auto;
+  border-radius: 4px;
+  border: 2px solid#9952e0;
   padding: 10px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  background-color: #003679;
+  color: white;
 
   &::placeholder {
-    color: chocolate;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #003679;
+    color: white;
+    font-family: 'Poppins', sans-serif;
   }
 
   &:focus {
     outline: none;
-    box-shadow: 0 0 3pt 2pt chocolate;
+    box-shadow: 0 0 3pt 2pt #9952e0;
   }
 }
