New components, style, data, types, helpers

--- a/src/components/game/game.scss
+++ b/src/components/game/game.scss
@@ -13,3 +13,12 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.game__text {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 10px;
+}
