--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
+
+
+
 * {
     box-sizing: border-box;
 }
@@ -9,4 +12,5 @@ body {
     padding: 0;
     font-family: 'Poppins', sans-serif;
     background-color: #003679;
+    color: white;
 }
