--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -22,3 +22,21 @@ button {
 .button__icon {
   color: white;
 }
+
+@media only screen and (max-width: 1000px) {
+  button {
+  margin: 10px;
+  padding: 10px;
+  width: 120px;
+  height: 120px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  button {
+  margin: 10px;
+  padding: 10px;
+  width: 90px;
+  height: 90px;
+  }
+}
