--- a/src/components/resultInfo/resultInfo.scss
+++ b/src/components/resultInfo/resultInfo.scss
@@ -9,8 +9,21 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 
   & p {
       margin: 5px 0;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .resultInfo {
+    padding: 3px;
+    font-size: 18px;
+    margin-bottom: 10px;
+  
+    & p {
+        margin: 3px 0;
+    }
   }
 }
