--- a/src/components/resultInfo/resultInfo.scss
+++ b/src/components/resultInfo/resultInfo.scss
@@ -27,3 +27,16 @@
     }
   }
 }
+
+.resultInfo__text {
+  color:  #52e0e0;
+}
+
+.win  {
+  color:  #9952e0;
+  font-weight: 700;
+}
+
+.lose {
+  color: #e05252;
+}
