--- a/src/components/game/game.scss
+++ b/src/components/game/game.scss
@@ -23,6 +23,12 @@
   margin-bottom: 5px;
 }
 
+.input-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media only screen and (max-width: 1100px) {
   .game__heading {
     font-size: 36px;
