--- a/src/components/gameOver/gameOver.scss
+++ b/src/components/gameOver/gameOver.scss
@@ -23,3 +23,11 @@
     font-weight: 500;
     margin: 15px 0;
 }
+
+@media only screen and (max-width: 800px) {
+    
+    .gameOver__text {
+        font-size: 18px;
+        margin: 20px 0;
+    }
+  }
